[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compligator"
version = "0.2.0"
description = "Compliance document aggregator — download, sync, and normalize framework docs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "pymupdf>=1.24",
]

[project.scripts]
compligator = "compligator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["compligator*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
